log
Sat 08 Apr 2023 08:52:45 PM UTC: 
 tests:  0|6
total_score: 0/70
8e69460
Thu 20 Apr 2023 12:08:01 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: unknown type name ‘Hashmap’; did you mean ‘HashMap’?
   56 |   Hashmap *map = (Hashmap *) malloc(sizeof(Hashmap));
      |   ^~~~~~~
      |   HashMap
hashmap.c:56:19: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |   Hashmap *map = (Hashmap *) malloc(sizeof(Hashmap));
      |                   ^~~~~~~
      |                   HashMap
hashmap.c:56:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:28: error: expected expression before ‘)’ token
   56 |   Hashmap *map = (Hashmap *) malloc(sizeof(Hashmap));
      |                            ^
hashmap.c:60:6: error: request for member ‘buckets’ in something not a structure or union
   60 |   map->buckets = (Pair **) malloc(sizeof(Pair *));
      |      ^~
hashmap.c:61:10: error: request for member ‘buckets’ in something not a structure or union
   61 |   if (map->buckets == NULL){
      |          ^~
hashmap.c:64:6: error: request for member ‘size’ in something not a structure or union
   64 |   map->size = 0;
      |      ^~
hashmap.c:65:6: error: request for member ‘capacity’ in something not a structure or union
   65 |   map->capacity = capacity;
      |      ^~
hashmap.c:66:6: error: request for member ‘current’ in something not a structure or union
   66 |   map->current = -1;
      |      ^~
hashmap.c:67:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   67 |   return map;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
13f30c0
